REFRESH: Pages for 2017S

--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
     "useSideMenu": true,
     "lineBreaks": "gfm",
     "anchorCharacter": "&para;",
-    "title": "CPSC 481 - 2016F"
+    "title": "CPSC 481 - 2017S"
 }
 
